<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.example.pento.ui.chat.ChatActivity">


    <RelativeLayout
        android:id="@+id/upper_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/chat_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/back_button"
            android:onClick="onClickSwitchIntent"></androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white"
            android:text="Cabbage Patch Cats"
            android:id="@+id/GroupName"
            android:layout_toRightOf="@id/chat_back"
            android:textSize="30dp"
            android:textColor="#000"></androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/report_button"></androidx.appcompat.widget.AppCompatImageButton>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conversation"
        android:layout_width="match_parent"
        android:layout_height="548dp"
        android:layout_above="@+id/searchbar"
        android:layout_below="@+id/upper_nav"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_edit_text"
        android:imeActionId="4"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp" />


</RelativeLayout>