...
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onClickSwitchIntent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"></androidx.appcompat.widget.AppCompatImageButton>
...
